--- a/src/my/inventariouepb/InventarioUI.form
+++ b/src/my/inventariouepb/InventarioUI.form
@@ -182,6 +182,9 @@
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botOkActionPerformed"/>
                   </Events>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="botOk.setMnemonic(KeyEvent.VK_O);"/>
+                  </AuxValues>
                 </Component>
               </SubComponents>
             </Container>
@@ -224,13 +227,13 @@
 
                   <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                   <SubComponents>
-                    <Component class="javax.swing.JTable" name="jTable2">
+                    <Component class="javax.swing.JTable" name="tabUltIni">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="3" rowCount="3">
                             <Column editable="false" title="Tombo" type="java.lang.Object"/>
                             <Column editable="false" title="Verificar" type="java.lang.Object"/>
-                            <Column editable="true" title="Observa&#xe7;&#xf5;es" type="java.lang.String"/>
+                            <Column editable="false" title="Observa&#xe7;&#xf5;es" type="java.lang.String"/>
                           </Table>
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -366,7 +369,7 @@
               <SubComponents>
                 <Component class="javax.swing.JButton" name="botCargAcervo">
                   <Properties>
-                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor" postCode="botCargAcervo.setMnemonic(KeyEvent.VK_C);">
                       <Image iconType="3" name="/my/imagens/icon_bd.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Carregar arquivo"/>
@@ -389,7 +392,7 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="botSelAcervo">
                   <Properties>
-                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor" postCode="botSelAcervo.setMnemonic(KeyEvent.VK_S);">
                       <Image iconType="3" name="/my/imagens/icon_open.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Selecionar arquivo"/>
@@ -513,6 +516,9 @@
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="vrfExemplarActionPerformed"/>
                   </Events>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="vrfExemplar.setMnemonic(KeyEvent.VK_F);"/>
+                  </AuxValues>
                 </Component>
                 <Container class="javax.swing.JScrollPane" name="jScrollPane1">
                   <AuxValues>
@@ -560,6 +566,9 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botInsCodActionPerformed"/>
                     <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="botInsCodKeyPressed"/>
                   </Events>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="botInsCod.setMnemonic(KeyEvent.VK_I);"/>
+                  </AuxValues>
                 </Component>
                 <Component class="javax.swing.JButton" name="botLimpCod">
                   <Properties>
@@ -569,6 +578,9 @@
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botLimpCodActionPerformed"/>
                   </Events>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="botLimpCod.setMnemonic(KeyEvent.VK_L);"/>
+                  </AuxValues>
                 </Component>
                 <Component class="javax.swing.JButton" name="botDesfInsCod">
                   <Properties>
@@ -578,6 +590,9 @@
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botDesfInsCodActionPerformed"/>
                   </Events>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="botDesfInsCod.setMnemonic(KeyEvent.VK_D);"/>
+                  </AuxValues>
                 </Component>
                 <Component class="javax.swing.JSeparator" name="jSeparator1">
                 </Component>
@@ -698,7 +713,7 @@
               <SubComponents>
                 <Component class="javax.swing.JButton" name="botCargSIABI">
                   <Properties>
-                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor" postCode="botCargSIABI.setMnemonic(KeyEvent.VK_C);">
                       <Image iconType="3" name="/my/imagens/icon_bd.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Carregar arquivo"/>
@@ -721,7 +736,7 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="botSelSIABI">
                   <Properties>
-                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor" postCode="botSelSIABI.setMnemonic(KeyEvent.VK_S);">
                       <Image iconType="3" name="/my/imagens/icon_open.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Selecionar arquivo"/>
@@ -815,6 +830,9 @@
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botGerRelatActionPerformed"/>
                   </Events>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="botGerRelat.setMnemonic(KeyEvent.VK_G);"/>
+                  </AuxValues>
                 </Component>
                 <Component class="javax.swing.JComboBox" name="comboRelat">
                   <Properties>
