--- a/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
+++ b/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
@@ -3,9 +3,6 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[720, 360]"/>
-    </Property>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -230,13 +227,19 @@
                     <Component class="javax.swing.JTable" name="tabUltIni">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="3" rowCount="3">
-                            <Column editable="false" title="Tombo" type="java.lang.Object"/>
+                          <Table columnCount="8" rowCount="3">
+                            <Column editable="false" title="CDD" type="java.lang.String"/>
+                            <Column editable="false" title="Tombo" type="java.lang.String"/>
+                            <Column editable="false" title="Tombo Anterior 1" type="java.lang.String"/>
+                            <Column editable="false" title="Tombo Anterior 2" type="java.lang.String"/>
+                            <Column editable="false" title="Tombo Posterior 1" type="java.lang.String"/>
+                            <Column editable="false" title="Tombo Posterior 2" type="java.lang.String"/>
                             <Column editable="false" title="Verificar" type="java.lang.Object"/>
                             <Column editable="false" title="Observa&#xe7;&#xf5;es" type="java.lang.String"/>
                           </Table>
                         </Property>
-                        <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+                        <Property name="autoResizeMode" type="int" value="0"/>
+                        <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor" preCode="//Font font = getGraphics().getFont();&#xa;&#xa;//FontMetrics fmetrics = tabUltIni.getFontMetrics();&#xa;&#xa;for (int i = 0; i &lt; tabUltIni.getColumnCount(); i++){&#xa;    &#xa;    //Font font = getGraphics().getFont();&#xa;    Font font = tabUltIni.getFont();&#xa;    FontMetrics fmetrics = this.getFontMetrics(font);&#xa;    &#xa;    int comprString = fmetrics.stringWidth(tabUltIni.getColumnName(i));&#xa;    //int comprString = font.stringW(tabUltIni.getColumnName(i));&#xa;    //tabUltIni.getColumnModel().getColumn(i).setPreferredWidth(comprString);&#xa;    tabUltIni.getColumnModel().getColumn(i).setMinWidth(comprString + 10);&#xa;    &#xa;}">
                           <TableColumnModel selectionModel="0">
                             <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                               <Title/>
@@ -251,7 +254,7 @@
                           </TableColumnModel>
                         </Property>
                         <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
-                          <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
+                          <TableHeader reorderingAllowed="false" resizingAllowed="false"/>
                         </Property>
                       </Properties>
                     </Component>
@@ -290,7 +293,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="painelLeCodAcervo" pref="265" max="32767" attributes="0"/>
+                          <Component id="painelLeCodAcervo" pref="268" max="32767" attributes="0"/>
                           <Component id="painelCargArqAcervo" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -370,7 +373,7 @@
                 <Component class="javax.swing.JButton" name="botCargAcervo">
                   <Properties>
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor" postCode="botCargAcervo.setMnemonic(KeyEvent.VK_C);">
-                      <Image iconType="3" name="/my/imagens/icon_bd.png"/>
+                      <Image iconType="3" name="/com/br/uepb/bsc7/www/images/icon_bd.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Carregar arquivo"/>
                   </Properties>
@@ -393,7 +396,7 @@
                 <Component class="javax.swing.JButton" name="botSelAcervo">
                   <Properties>
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor" postCode="botSelAcervo.setMnemonic(KeyEvent.VK_S);">
-                      <Image iconType="3" name="/my/imagens/icon_open.png"/>
+                      <Image iconType="3" name="/com/br/uepb/bsc7/www/images/icon_open.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Selecionar arquivo"/>
                   </Properties>
@@ -633,7 +636,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="painelCargArqSIABI" max="32767" attributes="0"/>
+                      <Component id="painelCargArqSIABI" pref="268" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -714,7 +717,7 @@
                 <Component class="javax.swing.JButton" name="botCargSIABI">
                   <Properties>
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor" postCode="botCargSIABI.setMnemonic(KeyEvent.VK_C);">
-                      <Image iconType="3" name="/my/imagens/icon_bd.png"/>
+                      <Image iconType="3" name="/com/br/uepb/bsc7/www/images/icon_bd.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Carregar arquivo"/>
                   </Properties>
@@ -737,7 +740,7 @@
                 <Component class="javax.swing.JButton" name="botSelSIABI">
                   <Properties>
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor" postCode="botSelSIABI.setMnemonic(KeyEvent.VK_S);">
-                      <Image iconType="3" name="/my/imagens/icon_open.png"/>
+                      <Image iconType="3" name="/com/br/uepb/bsc7/www/images/icon_open.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Selecionar arquivo"/>
                   </Properties>
