--- a/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
+++ b/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
@@ -263,15 +263,8 @@
                   <SubComponents>
                     <Component class="javax.swing.JTable" name="tabUltIni">
                       <Properties>
-                        <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="6" rowCount="3">
-                            <Column editable="false" title="CDD" type="java.lang.String"/>
-                            <Column editable="false" title="Tombo" type="java.lang.String"/>
-                            <Column editable="false" title="Tombo Anterior 1" type="java.lang.String"/>
-                            <Column editable="false" title="Tombo Anterior 2" type="java.lang.String"/>
-                            <Column editable="false" title="Tombo Posterior 1" type="java.lang.String"/>
-                            <Column editable="false" title="Tombo Posterior 2" type="java.lang.String"/>
-                          </Table>
+                        <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                          <Connection code="modeloTabelaIni" type="code"/>
                         </Property>
                         <Property name="autoResizeMode" type="int" value="0"/>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor" postCode="for (int i = 0; i &lt; tabUltIni.getColumnCount(); i++){&#xa;   &#xa;    Font font = tabUltIni.getFont();&#xa;    FontMetrics fmetrics = this.getFontMetrics(font);&#xa;    &#xa;    int comprString = fmetrics.stringWidth(tabUltIni.getColumnName(i));&#xa;    tabUltIni.getColumnModel().getColumn(i).setMinWidth(comprString + 10);&#xa;    &#xa;}">
